# qml-map-editor

./: .clang-format  CMakeLists.txt  README.en.md  README.md
src/: App.qml  CMakeLists.txt  EditorMap.qml  MapEditorActionBar.qml  MapEditorActionButton.qml  MapEditorLayer.qml  MapEditorToolBar.qml  main.cc
src/components/: CMakeLists.txt  MapCircleItem.qml  MapLinestringItem.qml  MapMarkerItem.qml  MapPointItem.qml  MapPolygonItem.qml  MapSegmentItem.qml  MapSquareItem.qml  mapcircle.cc  mapcircle.h  mapeditorcontroller.cc  mapeditorcontroller.h  mapgeometry.cc  mapgeometry.h  maplinestring.cc  maplinestring.h  mappoint.cc  mappoint.h  mappolygon.cc  mappolygon.h  mapsquare.cc  mapsquare.h
